# bazel-micronaut-example

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  bazel-bazel-micronaut-example  dependencies.bzl  maven_install.json
src/main/kotlin/com/sumglobal/: Application.kt
src/main/kotlin/com/sumglobal/main/: HelloBazelMicronautController.kt
src/main/resources/: application.yml  logback.xml
src/test/kotlin/com/sumglobal/main/: HelloBazelMicronautControllerTest.kt
src/test/resources/: logback.xml
