package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "define_kt_toolchain",  "kt_jvm_library")
load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_plugin")



KOTLIN_LANGUAGE_LEVEL="1.3" 	# "1.1", "1.2", or "1.3"
JAVA_LANGUAGE_LEVEL="11"  		# "1.6", "1.8", "9", "10", "11", or "12"

define_kt_toolchain(
    name = "kotlin_toolchain", # registed in the workspace
    api_version = KOTLIN_LANGUAGE_LEVEL,
    jvm_target = JAVA_LANGUAGE_LEVEL,
    language_version = KOTLIN_LANGUAGE_LEVEL,
)

java_plugin(
    name = "micronaut_inject_plugin2",
    processor_class = "io.micronaut.annotation.processing.TypeElementVisitorProcessor",
    deps = [
        "@maven//:io_micronaut_micronaut_inject_java",
        "@maven//:io_micronaut_micronaut_aop",
        "@maven//:io_micronaut_micronaut_inject",
        "@maven//:io_micronaut_micronaut_validation",
    ],
)

java_plugin(
    name = "micronaut_inject_plugin",
    processor_class = "io.micronaut.annotation.processing.BeanDefinitionInjectProcessor",
    deps = [
        "@maven//:io_micronaut_micronaut_inject_java",
        "@maven//:io_micronaut_micronaut_aop",
        "@maven//:io_micronaut_micronaut_inject",
        "@maven//:io_micronaut_micronaut_validation",
    ],
)

java_library(
    name = "micronaut_lib",
    exported_plugins = ["micronaut_inject_plugin","micronaut_inject_plugin2"],
    exports = [
        "@maven//:io_micronaut_micronaut_inject_java",
        "@maven//:io_micronaut_micronaut_aop",
        "@maven//:io_micronaut_micronaut_inject",
        "@maven//:io_micronaut_micronaut_validation",
    ],
)

java_library(
    name = "java_deps",
    resources = glob(["src/main/resources/**/*.xml", "src/main/resources/**/*.yml"]),
    exports = [
         "@maven//:ch_qos_logback_logback_classic",
         "@maven//:ch_qos_logback_logback_core",
         "@maven//:org_slf4j_slf4j_api",
         "@maven//:org_jetbrains_exposed_exposed",
         "@maven//:io_micronaut_micronaut_http_server_netty",
         "@maven//:io_micronaut_micronaut_runtime",
         "@maven//:io_micronaut_micronaut_core",
         "@maven//:io_reactivex_rxjava2_rxkotlin",
         "@maven//:javax_annotation_javax_annotation_api",
         "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
         "@maven//:io_micronaut_micronaut_http_client",

    ],
)

kt_jvm_library(
    name = "app_lib",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    deps = [
        ":micronaut_lib",
        ":java_deps",
    ],
)

java_binary(
    name = "bazel-micronaut-example",
    main_class = "com.sumglobal.Application",
    runtime_deps = [":app_lib"],
)